<resources>
    <string name="app_package_name">com.admin.app0612</string>
    <string name="zxing_package_name">com.google.zxing.client.android</string>
    <string name="zxing_download_uri"></string>
    <string name="action_bar_title_main">"Google 身份验证器"</string>
    <string name="action_bar_title_add_account">"添加帐户"</string>
    <string name="action_bar_title_setting">"设置"</string>
    <string name="action_bar_title_setting_about">"关于"</string>
    <string name="action_bar_title_setting_timesync">"校正用来生成验证码的时间"</string>
    <string name="action_bar_title_manually_add_account">"手动添加账户"</string>
    <string name="button_add_account">"添加帐户"</string>
    <string name="button_how_it_works">"了解其工作原理"</string>
    <string name="option_menu_add_account">"添加账户"</string>
    <string name="option_menu_how_it_works">"了解其工作原理"</string>
    <string name="option_menu_settings">"设置"</string>
    <string name="scan_barcode">"扫描条形码"</string>
    <string name="manually_add_account">"手动添加账户"</string>
    <string name="howitwork1_title">"要登录帐户，您需要输入密码。"</string>
    <string name="howitworks1_details">"但是，如果您是在新的计算机或设备上登录，Google 会要求您输入特殊的验证码来验证您的身份。"</string>
    <string name="howitwork2_title">"如果您是在新的计算机上登录，请输入通过手机获取的验证码。"</string>
    <string name="howitworks2_details">"该应用会生成必要的验证码供您继续登录。"</string>
    <string name="howitwork3_title">"然后您就能成功登录了。"</string>
    <string name="howitworks3_details">"您还可以选择记住该计算机，这样，下次 Google 就不会再要求您在这台计算机上输入验证码了。"</string>
    <string name="setting_options_timesync_title">"校正用来生成验证码的时间"</string>
    <string name="setting_options_timesync_detail">"将身份验证器的内部时钟与Google服务器进行同步"</string>
    <string name="setting_options_about_title">"关于"</string>
    <string name="about_options_version_title">"版本"</string>
    <string name="about_options_version_detail">"2.12"</string>
    <string name="about_options_open_source_title">"开放源代码项目"</string>
    <string name="about_options_service_title">"服务条款"</string>
    <string name="about_options_private_policy_title">"隐私权政策"</string>
    <string name="timesync_sync_now_title">"立即同步"</string>
    <string name="timesync_adjustment_in_minutes_title">"Adjustment in minutes"</string>
    <string name="timesync_about_function_title">"关于此功能  "</string>
    <string name="button_back">"上一页"</string>
    <string name="button_next">"下一页"</string>
    <string name="button_ok">"确认"</string>
    <string name="button_cancel">"退出"</string>
    <string name="button_add">"添加"</string>
    <string name="timesync_sync_now_progress_dialog_title">"立即同步"</string>
    <string name="timesync_sync_now_progress_dialog_details">"正在连接服务器…"</string>
    <string name="enter_pin">"在登录帐户期间，如果提示输入验证码，请输入此验证码："</string>
    <string name="add_account_edit_username">"请输入账户名称"</string>
    <string name="add_account_edit_pin">"请输入秘钥"</string>
    <string name="add_account_dropdown_time">"基于时间"</string>
    <string name="add_account_dropdown_counter">"基于计数器"</string>
    <string name="welcome_page_title">"每天都有数千个在线帐户被盗用"</string>
    <string name="welcome_page_details">"即使您的密码被盗，两步验证也能保护您的 Google 帐户。"</string>
    <string name="opensource_page_url">https://github.com/google/google-authenticator/</string>
    <string name="terms_page_url">http://m.google.com/tospage</string>
    <string name="privacy_page_url">http://www.google.com/policies/privacy/</string>
    <string name="timesync_about_function_content_title">About this feature</string>
    <string name="timesync_about_function_content_details">
    <![CDATA[
      If you press &quot;Sync now&quot;, Authenticator will attempt to sync its internal clock with
      Google servers once. The device\'s Date & Time settings will not be changed.
      <p>
      Authenticator does not transmit any personal data or account information while synchronizing
      its internal clock with Google servers.
      <p>
      <b>Why this is useful</b>
      <p>
      Authenticator generates 2-step verification codes based on 1) the current time, and 2) a
      secret number known to the app and the server.
      <p>
      If Authenticator and the server disagree on what time it is, the codes that the app generates
      may not be accepted when you try to log in.
      <p>
      By default Authenticator uses the device\'s Date & Time settings, and in most cases you will
      be able to generate valid codes by making sure your time, date, and time zone settings are
      configured correctly.  However, when time mismatches do occur, they can be hard to
      troubleshoot (especially if you use network-provided time or time zones).
    ]]>
  </string>
    <string name="app_name">条码扫描器</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">Google 购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_books">谷歌图书</string>
    <string name="msg_google_product">谷歌购物</string>
    <string name="msg_google_shopper_missing">Google 购物未安装</string>
    <string name="msg_install_google_shopper">Google 购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_try_bsplus">尝试条码扫描器+</string>
    <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="remove_account_dialog_warn_message1">"删除该帐户会导致您无法生成验证码，但不会关闭双重身份验证。您可能会因此无法登录自己的帐户。"</string>
    <string name="remove_account_dialog_warn_message2">"在删除该帐户之前，请执行以下操作："</string>
    <string name="remove_account_dialog_warn_message3">"1.关闭该帐户的两步验证或者"</string>
    <string name="remove_account_dialog_warn_message4">"2.确保您可以通过其他方法生成验证码"</string>
</resources>