<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:paddingTop="20dp"
              android:paddingBottom="20dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/remove_account_dialog_warn_message1"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/remove_account_dialog_warn_message2"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/remove_account_dialog_warn_message3"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/remove_account_dialog_warn_message4"
        android:textSize="16sp"
        android:textColor="#fff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>