<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:clipToPadding="true">

    <TextView
        android:id="@+id/timesync_about_function_content_title"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/timesync_about_function_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/timesync_about_function_content_detail"
        android:layout_below="@+id/timesync_about_function_content_title"
        android:layout_marginTop="30dp"
        android:text="@string/timesync_about_function_content_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_alignParentBottom="true"
        android:text="@string/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>